--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-Flask>=3.0
-Flask-Login>=0.6
-Flask-WTF>=1.2
-WTForms>=3.1
-SQLAlchemy>=2.0
-psycopg[binary]>=3.2
-python-dotenv>=1.0
-gunicorn>=21.2
-bcrypt
+Flask>=3.0,<4.0
+Flask-Login>=0.6,<0.7
+Flask-WTF>=1.2,<1.3
+WTForms>=3.1,<4.0
+
+SQLAlchemy>=2.0,<3.0
+Flask-SQLAlchemy>=3.1,<4.0
+
+psycopg[binary]>=3.2,<3.3
+python-dotenv>=1.0,<2.0
+gunicorn>=21.2,<22.0
+bcrypt>=4.1,<5.0
