--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ WTForms>=3.1,<4.0
 SQLAlchemy>=2.0,<3.0
 Flask-SQLAlchemy>=3.1,<4.0
 
-psycopg[binary]>=3.2,<3.3
+psycopg2-binary==2.9.9      # <-- troquei
 python-dotenv>=1.0,<2.0
 gunicorn>=21.2,<22.0
 bcrypt>=4.1,<5.0
